<resources>
    <string name="google_maps_api_key">AIzaSyCtlSAJAB_8GfgjDysecgMog9CIKo0_mIY</string>

    <string name="app_name">Bike Maps</string>
    <string name="settings_title">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="endtrip">End trip</string>

    <string name="nav_map">Map</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_header_title">Navigation header</string>
    <string name="button_recenter"></string>
    <string name="durationTextView1">Duration</string>
    <string name="durationTextView">Duration</string>
    <!--Info Card-->
    <string name="fastride">Calculate route</string>
    <string name="button_phone">Phone</string>

    <string name="joyride">Joy route</string>
    <string name="button_website">Website</string>
    <string name="rating">RATING:</string>
    <string name="ratingValue">5</string>
    <!--Navigate Card-->
    <string name="durationView">Duration</string>
    <string name="distanceView">Distance</string>

    <string name="button_nav_yes">Yes</string>
    <string name="button_nav_cancel">Cancel</string>
    <!--register&login-->
    <string name="action_sign_in_short">Register</string>
    <string name="submit_user_details">Submit</string>
    <string name="skip">Skip this step</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="edit_details">Edit Details</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_change_password">New password (optional)</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Don\'t have an account? Register now!</string>
    <string name="btn_link_to_login">Already have an account? Click here to login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered email so we can send you password reset instructions.</string>
    <string name="email_id">Email ID</string>

    <string name="total_distance">Total distance:</string>
    <string name="average_speed">Average speed:</string>
    <string name="average_speed1">Average speed:</string>


    <string name="collection_user_locations">User Locations</string>
    <string name="collection_user_trips">User Trips</string>
    <string name="collection_user_details">User Details</string>

</resources>
