<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bikeology.bikemaps.AccountActivity.AccountActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountActivity.AccountActivity">

        <EditText
            android:id="@+id/old_email"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sign_out"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="192dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="82dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changePass"
            android:layout_marginBottom="46dp"
            android:layout_toRightOf="@+id/progressBar"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="InvalidImeActionId"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="125dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="250dp"
            android:focusableInTouchMode="true"
            android:hint="@string/new_pass"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="InvalidImeActionId"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="168dp" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sign_out"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="169dp"
            android:layout_marginRight="169dp"
            android:layout_marginBottom="203dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="211dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="59dp"
            android:layout_marginLeft="59dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="142dp"
            android:text="@string/change_password"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/change_password_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="94dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="456dp" />

        <TextView
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:layout_alignBottom="@+id/sign_out"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="221dp"
            android:layout_marginBottom="247dp"
            android:gravity="center"
            android:hint="@string/email_id"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>